[UTT-005] [Реализовать метод авторизации по Github]
Добавлена конфигурация client id и secret id от приложения для авторизации по github.
Добавлены параметры host, protocol для сервера.

Создан коннектор к телеграм-боту.
Создан конектор к гитхабу с функцией получения токена пользователя.

Создан контроллер с функциями получения информации о сессии (возвращает ссылку github для авторизации) и отправления токена телеграм-боту.

Создан объект AuthResponse для возвращения ответа на функцию controller#GetSession().

Создана функция Create_Path_Param и вынесена в отдельный пакет utils.

--- a/go_modules/auth/config/application.yml
+++ b/go_modules/auth/config/application.yml
@@ -2,3 +2,9 @@ application:
   name: "auth"
   version: "0.0.1"
   port: 8080
+  host: "localhost"
+  protocol: "http"
+
+github:
+  clientId: "96a839fbb3b81d8576e0"
+  secret: "54e2e59665c5ad7f7e96e683a0cc9cd706964b8a"
