--- a/go_modules/auth/config/application.yml
+++ b/go_modules/auth/config/application.yml
@@ -8,3 +8,10 @@ application:
 github:
   clientId: "96a839fbb3b81d8576e0"
   secret: "54e2e59665c5ad7f7e96e683a0cc9cd706964b8a"
+
+database:
+  host: "localhost"
+  port: 27017
+  username: "utt"
+  password: "utt123"
+  dbName: "unitimetable"
